[gd_scene load_steps=18 format=3 uid="uid://bvt4747kc5u2t"]

[ext_resource type="Script" uid="uid://bybmqqa8053uc" path="res://game.gd" id="1_1il7v"]
[ext_resource type="PackedScene" uid="uid://b1ot6gn6tms6h" path="res://lesson_reference/player_3d_template.tscn" id="1_w0p8v"]
[ext_resource type="Script" uid="uid://31jh56gqo7ov" path="res://lesson_reference/game_manager.gd" id="5_ryrav"]
[ext_resource type="PackedScene" uid="uid://diojogmqgr0pc" path="res://coin.tscn" id="6_eow3j"]
[ext_resource type="PackedScene" uid="uid://cnedxfn2pxh2t" path="res://level/level.tscn" id="7_2frud"]
[ext_resource type="Script" uid="uid://dglmgqrryaq2x" path="res://HUD.gd" id="7_eow3j"]
[ext_resource type="AudioStream" uid="uid://dkjj1axc6gms0" path="res://hit-organic-cabbage-glove-omnidirectional-microphone-6.wav" id="8_215e1"]
[ext_resource type="Script" uid="uid://rednd4n36y7b" path="res://pause_menu.gd" id="8_j5wjh"]
[ext_resource type="PackedScene" uid="uid://dc5cnhiusnupn" path="res://autoload/Enemy.tscn" id="9_vef74"]
[ext_resource type="PackedScene" uid="uid://77n6iw45vutb" path="res://EnemyChaser.tscn" id="10_hve3p"]
[ext_resource type="PackedScene" uid="uid://4spffo2r0vp" path="res://EnemyJumper.tscn" id="11_mfdv2"]
[ext_resource type="PackedScene" uid="uid://dxvwlq4bnpfxy" path="res://EnemyExploder.tscn" id="12_iotsf"]
[ext_resource type="PackedScene" uid="uid://do65n36wr7xw5" path="res://EnemyTurret.tscn" id="13_lc2xo"]
[ext_resource type="PackedScene" uid="uid://cxp5hinqbxsxr" path="res://Enemy.tscn" id="15_7sc4i"]
[ext_resource type="PackedScene" uid="uid://bxg6oejpaitdt" path="res://level/interactable/flag/flag_reached_screen.tscn" id="19_cpgj4"]

[sub_resource type="Gradient" id="Gradient_j5wjh"]
interpolation_mode = 1
colors = PackedColorArray(0, 1, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vef74"]
gradient = SubResource("Gradient_j5wjh")

[node name="Game" type="Node"]
script = ExtResource("1_1il7v")

[node name="Player3DTemplate" parent="." instance=ExtResource("1_w0p8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.43638, 0, -7.8513)

[node name="FlagReachedScreen" parent="." instance=ExtResource("19_cpgj4")]

[node name="Level" parent="." instance=ExtResource("7_2frud")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 31.4)

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("5_ryrav")

[node name="Coin" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, 4.911051, 3.1654854, 2.4653978)

[node name="Coin2" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.911051, 4.215891, 2.4653978)

[node name="Coin3" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.911051, 5.2092824, 2.4653978)

[node name="Coin4" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.911051, 5.1033773, 9.684122)

[node name="Coin5" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.619154, 6.840621, 9.501314)

[node name="Coin6" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.382096, 7.2373734, 8.478651)

[node name="Coin7" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8519, 9.130287, 11.342962)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("7_eow3j")

[node name="CoinLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
text = "Monedas: 0"

[node name="TimerLabel" type="Label" parent="HUD"]
offset_left = 1.0
offset_top = 23.0
offset_right = 102.0
offset_bottom = 46.0
text = "Tiempo: 0.0 s"

[node name="HealthBar" type="TextureProgressBar" parent="HUD"]
offset_left = 3.0
offset_top = 49.0
offset_right = 112.0
offset_bottom = 73.0
value = 100.0
texture_progress = SubResource("GradientTexture1D_vef74")

[node name="DamageSound" type="AudioStreamPlayer3D" parent="HUD"]
stream = ExtResource("8_215e1")

[node name="Coin8" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.024971, 9.130287, 11.342962)

[node name="Coin9" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.187996, 9.130287, 11.342962)

[node name="Coin10" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.376144, 9.130287, 11.342962)

[node name="Coin11" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.817677, 8.668715, 42.40442)

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 1
script = ExtResource("8_j5wjh")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_left = -12.0
offset_top = -7.0
offset_right = 1046.0
offset_bottom = 730.0
color = Color(0.044309556, 0.044309556, 0.044309556, 0.58431375)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
offset_top = -7.0
offset_right = 1040.0
offset_bottom = 719.0
alignment = 1

[node name="Reanudar" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Reanudar
"

[node name="MenuPrincipal" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Menu principal"

[node name="Salir" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Salir"

[node name="EnemyChaser" parent="." instance=ExtResource("10_hve3p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4251, 1.0000019, -0.008513451)

[node name="Coin12" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, -57.63304, 9.467512, -0.86993074)

[node name="Coin13" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, -57.64357, 9.467512, -14.273298)

[node name="Coin14" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, -44.510002, 9.467512, -0.8802376)

[node name="Coin15" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, -44.521744, 9.467512, -15.828606)

[node name="Coin16" parent="." groups=["coins"] instance=ExtResource("6_eow3j")]
transform = Transform3D(0.9999997, 0, 0.0007853981, 0, 1, 0, -0.0007853981, 0, 0.9999997, -51.41039, 9.467512, -9.190998)

[node name="EnemyExploder2" parent="." instance=ExtResource("12_iotsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50.963287, 8.5, -8.157467)

[node name="EnemyTurret2" parent="." instance=ExtResource("13_lc2xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -73.19504, 8.499998, 58.820744)

[node name="EnemyTurret3" parent="." instance=ExtResource("13_lc2xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -91.42225, 8.500002, 59.380512)

[node name="EnemyTurret4" parent="." instance=ExtResource("13_lc2xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -69.68467, 8.5, 59.030285)

[node name="EnemyTurret5" parent="." instance=ExtResource("13_lc2xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -88.78443, 8.5, 59.446896)

[node name="EnemyJumper2" parent="." instance=ExtResource("11_mfdv2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -108.42867, 9, 42.756554)

[node name="EnemyJumper3" parent="." instance=ExtResource("11_mfdv2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -51.587723, 8.97168, 42.873165)

[node name="EnemyChaser2" parent="." instance=ExtResource("10_hve3p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.535784, 7.2218, 0.6061232)

[node name="Enemy2" parent="." instance=ExtResource("15_7sc4i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6784506, 0.04095936, -2.5385609)

[node name="Enemy3" parent="." instance=ExtResource("9_vef74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.1797304, 1.2618513, -3.6264257)

[node name="Coin17" parent="." instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.10126, 0.45789912, 7.3533363)

[node name="Coin18" parent="." instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.443316, 0.45789817, 1.7715664)

[node name="Coin19" parent="." instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.012676, 0.45789722, 7.804413)

[node name="Coin20" parent="." instance=ExtResource("6_eow3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.860691, 0.45789722, 2.4391327)

[connection signal="collected" from="Coin" to="GameManager" method="_on_coin_collected"]
[connection signal="collected" from="Coin" to="HUD" method="_on_coin_collected"]
